--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /AspModel/AspModel/obj/Debug
 /AspModel/CommonModules/bin/Debug
 /AspModel/CommonModules/obj/Debug
+/AspHandler/AspHandler/obj/Debug
