Manage Request Handler Execute

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /AspHandler/AspHandler/obj/Debug
 /AspPageLifecycle/AspPageLifecycle/bin
 /AspPageLifecycle/AspPageLifecycle/obj/Debug
+/AspRequestControl/AspRequestControl/obj/Debug
+/AspRequestControl/AspRequestControl/bin
